# OpenSimBenchmark

./: .gitignore  CMakeLists.txt  README.md  dodo.py  forget_tasks.sh  run_tasks.sh  sandbox.py  study.py  tasks.py
benchmarks/: CMakeLists.txt  benchmark_forward.cpp  benchmark_manager.cpp  benchmark_realize.cpp  forward.cpp  manager.cpp  realize.cpp
data/Rajagopal/: create_Rajagopal_models.py  millard_curves.py
dependencies/: install_benchmark.sh  install_dependencies.sh  install_opensim.sh
models/: 100link_pendulum.osim  10link_pendulum.osim  1link_pendulum.osim  20link_pendulum.osim  2link_pendulum.osim  50link_pendulum.osim  5link_pendulum.osim  Maier2024_shoulder.osim  Rajagopal.osim  RajagopalDGF.osim  RajagopalFunctionBasedPathActuators.osim  RajagopalFunctionBasedPathActuatorsNoConstraints.osim  RajagopalFunctionBasedPaths.osim  RajagopalFunctionBasedPathsDGF.osim  RajagopalFunctionBasedPathsDGFNoConstraints.osim  RajagopalFunctionBasedPathsNoConstraints.osim  RajagopalLaiUhlrich2023.osim  RajagopalPathActuators.osim
mujoco/elbow/: myoelbow_2dof6muscles.xml  myoelbow_2dof6muscles_jntalign.xml
mujoco/elbow/assets/: myoelbow_2dof6muscles_body.xml
mujoco/hand/: myohand_forearm.xml  myohand_w_markers.xml
mujoco/hand/assets/: myohand_assets.xml  myohand_wo_body.xml
mujoco/myo_sim/hand/: guitar.xml  myohand_forearm_full.xml
mujoco/myo_sim/scene/: ground.xml  myosuite_scene.xml
perfs/: CMakeLists.txt  perf_forward.cpp  perf_realize.cpp
results/RajagopalLaiUhlrich2023/forward/final_time0.01/: RajagopalLaiUhlrich2023.json  RajagopalLaiUhlrich2023_noconstraints.json  RajagopalLaiUhlrich2023_noconstraints_nomuscles.json  RajagopalLaiUhlrich2023_nomuscdyn.json  RajagopalLaiUhlrich2023_nomuscdyn_noconstraints.json  RajagopalLaiUhlrich2023_nomuscdyn_nowrap.json  RajagopalLaiUhlrich2023_nomuscdyn_nowrap_noconstraints.json  RajagopalLaiUhlrich2023_nomuscles.json  RajagopalLaiUhlrich2023_nowrap.json  RajagopalLaiUhlrich2023_nowrap_noconstraints.json
src/: CMakeLists.txt  main.cpp  realize.cpp  utilities.h
src/benchmarks/: CMakeLists.txt  benchmark_contact.cpp  benchmark_cpodes.cpp  benchmark_euler.cpp  benchmark_forward.cpp  benchmark_forward_cpodes.cpp  benchmark_forward_euler.cpp  benchmark_forward_rk4.cpp  benchmark_gait3d_exponential_spring_cpodes.cpp  benchmark_gait3d_exponential_spring_euler.cpp  benchmark_gait3d_hunt_crossley_cpodes.cpp  benchmark_gait3d_hunt_crossley_euler.cpp  benchmark_manager.cpp  benchmark_manager_euler.cpp  benchmark_manager_rk4.cpp  benchmark_realize.cpp  benchmark_rk4.cpp  benchmark_simbody_pendulum.cpp  benchmark_simbody_pendulum_euler.cpp  benchmark_simbody_pendulum_euler_custom.cpp  benchmark_simbody_pendulum_rk4.cpp  benchmark_simbody_pendulum_rk4_custom.cpp  integrator_comparison.cpp  opensim_vs_simbody_pendulum.cpp
src/models/: CMakeLists.txt  gait3d.cpp
src/perfs/: CMakeLists.txt  perf_forward.cpp  perf_realize.cpp
src/sandbox/: CMakeLists.txt  sandbox.cpp  sandbox.py  sandbox_contact.cpp  sandbox_gait3d.cpp  sandbox_integrators.cpp  sandbox_jaredsdude.cpp  sandbox_pendulum.cpp
src/utilities/: model_generator.py  utilities.h
utilities/: model_generator.py  utilities.h
